@@ -8,6 +8,7 @@ import os.path
 input = sg.Input('', tooltip="type here to search for a region's weather", enable_events=True, key='-INPUT-', font=('Arial Bold', 20), expand_x=True, justification='left')
 
 dailyColumn = [
+    [sg.Text("Daily data", font=('Ubuntu', 24))],
             [sg.TabGroup([
                 [ 
                     sg.Tab('Yesterday', [[sg.Text("null", key='day1data', visible=False)], ], key='day1'),
@@ -17,27 +18,29 @@ dailyColumn = [
                     sg.Tab('Day 5', [[sg.Text("null", key='day5data', visible=False)],], key='day5'),
                 ]], 
                     key='-tabgroup-', expand_x=True, expand_y=True),
-           ]
+           ],
+            [sg.Text("Console output", font=('Consolas', 16), justification='left')],
+            [sg.Multiline(size=(60,15), font='Courier 8', expand_x=True, expand_y=True, write_only=True,
+                                    reroute_stdout=True, reroute_stderr=True, echo_stdout_stderr=True, autoscroll=True, auto_refresh=True)],
+            # [sg.Output(size=(60,15), font='Courier 8', expand_x=True, expand_y=True)]
+            [sg.Button("QUIT APPLICATION")]
     ]
 graphColumn = [
-        [sg.Text("TO DO: fancy line graphs")],
+        [sg.Text("Graphs", font=('Ubuntu', 24))],
+        [sg.Canvas(size=(700,700), key="-graphs-")],
 ]
 
 layout = [
     [sg.Text("Basic weather application", font=('Arial Bold', 24))], 
+    [sg.Text("Search for a region here", font=('Ubuntu', 16))],
     [input],
     [sg.Button("SEARCH")],
     [sg.Column(dailyColumn),
              sg.VSeperator(),
-        sg.Column(graphColumn)
+        sg.Column(graphColumn, scrollable=True,  sbar_relief=sg.RELIEF_SOLID, sbar_width=12, sbar_arrow_width=12, expand_y=True, expand_x=True)
     ],
-    [sg.Text("Console output", size=18, justification='left')],
-    [sg.Multiline(size=(60,15), font='Courier 8', expand_x=True, expand_y=True, write_only=True,
-                                    reroute_stdout=True, reroute_stderr=True, echo_stdout_stderr=True, autoscroll=True, auto_refresh=True)],
-                      # [sg.Output(size=(60,15), font='Courier 8', expand_x=True, expand_y=True)]
-    [sg.Button("QUIT APPLICATION")]
 ]
-window = sg.Window("Simple weather app idk", layout, size=(720, 720))
+window = sg.Window("Simple weather app idk", layout, finalize=True, size=(1280, 720), resizable=True)
 
 while True:
     event, values = window.read()
@@ -71,6 +74,27 @@ while True:
                     window['day3data'].update(dailyData[2], visible=True)
                     window['day4data'].update(dailyData[3], visible=True)
                     window['day5data'].update(dailyData[4], visible=True)
+                    
+                    dataObject = weatherData['hourly']
+                    time = []
+                    count = 0
+                    for hour in dataObject['time']:
+                        if count % 24 == 0:
+                           time.append(hour.split('T')[0])
+                        else:
+                            time.append(f'{count}')
+                        count+=1
+                        
+                    
+                    # time = dataObject['time']
+                    temp = dataObject['temperature_2m']
+                    chance = dataObject['precipitation_probability']
+                    precip = dataObject['precipitation']
+                    wind = dataObject['windspeed_10m']
+                    gust = dataObject['windgusts_10m']
+                    
+                    draw(window['-graphs-'].TKCanvas, plotCustom(time, temp, chance, precip, wind, gust))
+
                     window.Refresh()
                 else:
                     print("Error - failed to retrieve weather data")
