@@ -1,2 +1,2 @@
-testmode = False
+testmode = True
 # use data from 'locationData.json' and 'weatherData.json' when true
