@@ -21,3 +21,4 @@ commit: null
 changes:
 [FIX] update tab when data is retreived
 [QOL] re-order data around
+[ADD] added graphs
